# fao-elt-pipelines

./: .envrc  .gitignore  INFO.md  Makefile  README.md  dbt.sh  docker-compose.yml  pyproject.toml  requirements.in
dbt_project/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt_project/data/: .gitkeep
dbt_project/macros/: generate_surrogate_key.sql
dbt_project/models/bronze/: sources.yml
dbt_project/models/gold/: gold_country_metrics.sql  gold_price_production_analysis.sql  gold_regional_summary.sql  schema.yml
dbt_project/models/silver/: schema.yml  silver_prices_cleaned.sql  silver_production_cleaned.sql  silver_top_countries.sql
dbt_project/tests/: test_data_quality.sql
ingestion/: __init__.py  api_client.py  file_client.py  load_to_database.py  pg_client.py
orchestration/: __init__.py  elt_pipeline.py  elt_pipeline_2.py
scripts/: quickstart.py  run_pipeline.sh  validate_setup.py
sql/: create_schemas.sql  sample_queries.sql
